[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://hero_selection_scene.gd" id="1"]

[node name="HeroSelectionScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "HERO SELECTION"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your champion for battle"
horizontal_alignment = 1

[node name="HeroContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="TouchControls" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)
alignment = 1

[node name="SelectHeroButton" type="Button" parent="CenterContainer/VBoxContainer/TouchControls"]
layout_mode = 2
custom_minimum_size = Vector2(250, 80)
text = "‚öîÔ∏è SELECT HERO"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/TouchControls"]
layout_mode = 2
custom_minimum_size = Vector2(250, 80)
text = "üè† BACK TO MENU"

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
autoplay = true
volume = 0.0
